--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,15 @@
     ],
     "require": {
         "illuminate/support": "^9.17",
-        "illuminate/mail": "^9.17"
+        "illuminate/mail": "^9.17",
+        "guzzlehttp/guzzle": "^7.4",
+        "ext-curl": "*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Tavsec\\LaravelDotdigitalMailDriver\\DotdigitalTransportServiceProvider"
+            ]
+        }
     }
 }
