--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": ">7.4",
         "illuminate/support": "^9.17",
         "illuminate/mail": "^9.17",
         "guzzlehttp/guzzle": "^7.4",
