--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">7.4|>8.0|>8.1",
         "illuminate/support": "^9.17|10.*",
-        "illuminate/mail": "^9.17|^10.*",
+        "illuminate/mail": "^9.17|10.*",
         "guzzlehttp/guzzle": "^7.4",
         "ext-curl": "*"
     },
